--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en" data-critters-container><head>
   <meta charset="utf-8">
-  <title>FarDesweb100624</title>
+  <title>deswebintegral_actions</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
